--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React Trello Project</title>
+  <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" type="text/css">
   <link rel="stylesheet" href="react-trello.1.0.9.min.css" type="text/css">
 </head>
 <body>
