--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>React Trello Project</title>
-  <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" type="text/css">
-  <link rel="stylesheet" href="react-trello.1.4.0.min.css" type="text/css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?v=1" />
+  <link rel="stylesheet" href="scripts/normalize.css/normalize.css" type="text/css">
+  <link rel="stylesheet" href="react-trello.1.4.1.min.css" type="text/css">
 </head>
 <body>
   <div id="app"></div>
-  <script src="react-trello.1.4.0.min.js"></script>
+  <script src="react-trello.1.4.1.min.js"></script>
 </body>
 </html>
