--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>React Trello Project</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?v=1" />
-  <link rel="stylesheet" href="scripts/normalize.css/normalize.css" type="text/css">
-  <link rel="stylesheet" href="react-trello.1.4.1.min.css" type="text/css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" type="text/css"/>
+  <link rel="stylesheet" href="react-trello.1.4.1.min.css" type="text/css"/>
 </head>
 <body>
   <div id="app"></div>
